kubernetes/zoom-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zoom-service
spec:
  selector:
    app: zoom
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
